another round of adjustments, copymob focused this time